basic user functionality

--- a/src/app/admin/static/admin/settings.html
+++ b/src/app/admin/static/admin/settings.html
@@ -55,15 +55,15 @@
                     <form class="settings-form" data-role="settings-form">
                         <label class="field">
                             <span>Bold</span>
-                            <input class="input" name="bold" placeholder="Ctrl+B" data-hotkey="true"/>
+                            <input class="input" data-hotkey="true" name="bold" placeholder="Ctrl+B"/>
                         </label>
                         <label class="field">
                             <span>Italic</span>
-                            <input class="input" name="italic" placeholder="Ctrl+I" data-hotkey="true"/>
+                            <input class="input" data-hotkey="true" name="italic" placeholder="Ctrl+I"/>
                         </label>
                         <label class="field">
                             <span>Code block</span>
-                            <input class="input" name="code_block" placeholder="Ctrl+Alt+L" data-hotkey="true"/>
+                            <input class="input" data-hotkey="true" name="code_block" placeholder="Ctrl+Alt+L"/>
                         </label>
                         <div class="form-actions">
                             <button class="btn btn--ghost" data-action="reset" type="button">reset defaults</button>
